2002-01-07   Roland Giersig  <rgiersig@cpan.org>

	* Pty.pm: adapted to new interface
	(close_slave): added for keeping open filecount straight
	(make_slave_controlling_terminal): created anew
	(slave): reverted from open_slave()

	* Tty.pm: v0.94_01

	* test.pl: adapted to new interface

	* Tty.xs: reverted to opening slave at creation time; added debug
	printfs
	(open_slave): use ptsname_r if there, forget about erroneous ttyname.
	(allocate_pty): added name param on openpty (doesn't take NULL for name)
	
2001-11-28   Roland Giersig  <rgiersig@cpan.org>

	* Tty.pm: v0.92_04

	* Tty.xs (BOOT): use perl_get_sv for backward compat

	* Makefile.PL: added analysis of configuration

2001-11-27   Roland Giersig  <rgiersig@cpan.org>

	* Tty.pm: v0.92_03

	* Tty.xs (BOOT): removed export_fail, undefined constants are now
	undef instead of not exportable; added CONFIG variable.

	* Makefile.PL: added setting of CONFIG var

	* test.pl: added printing of CONFIG var

	* Pty.pm (spawn): fixed bug with $^W handling

2001-11-17   Roland Giersig  <rgiersig@cpan.org>

	* Tty.xs (pty_allocate): complete rewrite, based on ideas from
	openssh and Xemacs.  Tries all ways detected by Makefile.PL in
	order, so in theory it should work everywhere (modulo system
	quirks).  First tries the high-level openpty() before getpt(),
	then various clone devices and finally BSD-style ptys.

	* Tty.xs (open_slave): moved master init stuff here, must be done
	before opening the slave.  The Stream module pushes are now tried
	on all systems but only generate warnings on systems that we know
	need them.

	* Makefile.PL: added tests for all kinds of functions and clone
	devices.
	
2001-11-14   Roland Giersig  <rgiersig@cpan.org>

	* Tty.xs (MODULE): stole creation code from openssh

	* test.pl: added test for controlling terminal

	* Pty.pm (spawn): rearranged setsid() and added a fresh open of
	the slave pty so the pty becomes the controlling terminal for the
	process.
